# YPTR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pose_track_config.ini
src/: pose_track_demo.cpp
src/draw/: cv_draw.cpp  cv_draw.h
src/filter/: keypoint_smoothing.h  one_euro_filter.h
src/position/: position_estimator.cpp  position_estimator.h
src/process/: postprocess.cpp  postprocess.h
src/reid/: osnet_reid.cpp  osnet_reid.h
src/task/: yolov8_custom.cpp  yolov8_custom.h
src/tracking/: BYTETracker.cpp  BYTETracker.h  STrack.cpp  STrack.h  kalmanFilter.cpp  kalmanFilter.h  utils.cpp
src/types/: yolo_datatype.h
src/websocket/: position_server.cpp  position_server.h
